--- a/dart-2022/pubspec.yaml
+++ b/dart-2022/pubspec.yaml
@@ -4,10 +4,13 @@ version: 1.0.0
 # repository: https://github.com/my_org/my_repo
 
 environment:
-  sdk: '>=2.18.0 <3.0.0'
+  sdk: ">=2.18.0 <3.0.0"
 
 dependencies:
+  basics: ^0.9.0
   characters: ^1.2.1
+  quiver: ^3.1.0
+  tuple: ^2.0.1
 
 dev_dependencies:
   lints: ^2.0.0
