--- a/.helix/languages.toml
+++ b/.helix/languages.toml
@@ -1,4 +1,8 @@
 [[language]]
+name = "rust"
+language-server = { command = "rustup", args = ["run", "stable", "rust-analyzer"] }
+
+[[language]]
 name = "typescript"
 auto-format = true
 shebangs = ["deno", "node"]
