--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
-# Files and directories created by pub.
-.dart_tool/
-.packages
+.DS_Store
 
-# Conventional directory for build output.
-build/
+.vscode/
 .idea/
+.helix/
